--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "mongoose": "^6.3.5",
         "next": "^10.0.6",
         "node-sass": "^5.0.0",
+        "nodemailer": "^6.7.8",
         "react": "^17.0.1",
         "react-bootstrap": "^1.5.0",
         "react-countup": "^4.3.3",
