--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "dev": "next dev -p 5000",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "postbuild": "next-sitemap"
     },
     "browser": {
         "fs": false,
@@ -17,6 +18,7 @@
         "moment": "^2.29.1",
         "mongoose": "^6.3.5",
         "next": "^10.0.6",
+        "next-sitemap": "^3.1.23",
         "node-sass": "^5.0.0",
         "nodemailer": "^6.7.8",
         "react": "^17.0.1",
