--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.29.1",
         "mongoose": "^6.3.5",
         "next": "^10.0.6",
+        "next-scripts": "^0.3.4",
         "next-sitemap": "^3.1.23",
         "nextjs-sitemap-generator": "^1.3.1",
         "node-sass": "^5.0.0",
