--- a/package.json
+++ b/package.json
@@ -1,44 +1,40 @@
 {
-    "name": "omra",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev -p 5000",
-        "build": "next build",
-        "start": "next start",
-        "postbuild": "next-sitemap"
-    },
-    "browser": {
-        "fs": false,
-        "path": false,
-        "os": false
-    },
-    "dependencies": {
-        "axios": "^0.27.2",
-        "moment": "^2.29.1",
-        "mongoose": "^6.3.5",
-        "next": "^10.0.6",
-        "next-scripts": "^0.3.4",
-        "next-sitemap": "^3.1.23",
-        "nextjs-sitemap-generator": "^1.3.1",
-        "node-sass": "^5.0.0",
-        "nodemailer": "^6.7.8",
-        "react": "^17.0.1",
-        "react-bootstrap": "^1.5.0",
-        "react-countup": "^4.3.3",
-        "react-dom": "^17.0.1",
-        "react-google-recaptcha": "^2.1.0",
-        "react-modal-video": "^1.2.6",
-        "react-multi-carousel": "^2.8.0",
-        "react-rangeslider": "^2.2.0",
-        "react-responsive-carousel": "^3.2.23",
-        "react-router-dom": "^5.2.0",
-        "react-scroll-to-top": "^1.0.5",
-        "react-slick": "^0.28.0",
-        "react-visibility-sensor": "^5.1.1",
-        "simple-react-lightbox": "^3.6.6",
-        "slick-carousel": "^1.8.1",
-        "use-scroll-position": "0.0.4",
-        "wowjs": "^1.1.3"
-    }
+  "name": "omra",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "postbuild": "next-sitemap"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.4",
+    "next": "^12.3.1",
+    "next-scripts": "^0.3.4",
+    "next-sitemap": "^3.1.23",
+    "nextjs-sitemap-generator": "^1.3.1",
+    "node-sass": "^7.0.3",
+    "nodemailer": "^6.8.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-countup": "^6.3.1",
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-modal-video": "^1.2.10",
+    "react-multi-carousel": "^2.8.2",
+    "react-rangeslider": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.4.1",
+    "react-scroll-to-top": "^3.0.0",
+    "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.55.0",
+    "simple-react-lightbox": "^3.6.6",
+    "slick-carousel": "^1.8.1",
+    "use-scroll-position": "0.0.4",
+    "wowjs": "^1.1.3"
+  }
 }
